--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 	Caio Min Young Lugão bae
-	<a href=""></a>GameStore<br>
-	<a href=""></a>Primeiros Passos em C<br>
+	<a href="https://ssthanatos.github.io/Gamestore/HomeV2.html"></a>GameStore<br>
+	<a href="https://ssthanatos.github.io/C/lista.html"></a>Primeiros Passos em C<br>
 
 </body>
 </html>
