--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>SSThanatos</title>
 </head>
 <body>
-	Caio Min Young Lugão bae
+	Caio Min Young Lugão bae<br>
 	<a href="https://ssthanatos.github.io/Gamestore/HomeV2.html">GameStore</a><br>
 	<a href="https://ssthanatos.github.io/C/lista.html">Primeiros Passos em C</a><br>
 
