--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	Caio Min Young Lugão bae<br>
-	<a href="https://ssthanatos.github.io/Gamestore/HomeV2.html">GameStore</a><br>
+	<a href="https://ssthanatos.github.io/GameStore/HomeV2.html">GameStore</a><br>
 	<a href="https://ssthanatos.github.io/C/lista.html">Primeiros Passos em C</a><br>
 
 </body>
