--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	Caio Min Young Lugão bae<br>
 	<a href="https://ssthanatos.github.io/GameStore/HomeV2.html">GameStore</a><br>
 	<a href="https://ssthanatos.github.io/C/lista.html">Primeiros Passos em C</a><br>
+	<a href="https://ssthanatos.github.io/Curriculo/Curriculo.html">Primeiros Passos em C</a><br>
 
 </body>
 </html>
