--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>SSThanatos</title>
 </head>
 <body>
-	Caio Min Young Lugão bae<br>
+	Caio Min Young Lugão bae CC1M<br>
 	<a href="https://ssthanatos.github.io/GameStore/HomeV2.html">GameStore</a><br>
 	<a href="https://ssthanatos.github.io/C/lista.html">Primeiros Passos em C</a><br>
 	<a href="https://ssthanatos.github.io/Curriculo/Curriculo.html">Currículo</a><br>
