--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 	<a href="https://ssthanatos.github.io/GameStore/HomeV2.html">GameStore</a><br>
 	<a href="https://ssthanatos.github.io/C/lista.html">Primeiros Passos em C</a><br>
 	<a href="https://ssthanatos.github.io/Curriculo/Curriculo.html">Currículo</a><br>
+	<a href="https://ssthanatos.github.io/Mapa/Location.html">Mapa</a><br>
+	<a href="https://ssthanatos.github.io/Calculadora/Juros.html">Calculadora de Juros</a><br>
+	<a href="https://ssthanatos.github.io/Jogo/Entrada.html">Jogo</a><br>
+	
+	
+	
 
 </body>
 </html>
